Fix visibility of pointer to "go up"

--- a/src/components/PageSection/PageSection.module.scss
+++ b/src/components/PageSection/PageSection.module.scss
@@ -42,6 +42,7 @@
   color: $primaryFontColor;
   padding: 0;
   width: 100%;
+  overflow: visible;
 }
 
 .header {
